--- a/css/style.css
+++ b/css/style.css
@@ -74,3 +74,134 @@ textarea:not([rows]) {
   scroll-margin-block: 5ex;
 }
 
+ul {
+  list-style-type: none;
+}
+
+:root {
+  /* PRIMARY COLORS */
+  --clr-primary-lime-green: hsl(163, 72%, 41%);
+  --clr-primary-bright-red: hsl(356, 69%, 56%);
+
+  --clr-primary-facebook: hsl(208, 92%, 53%);
+  --clr-primary-twitter: hsl(203, 89%, 53%);
+  --clr-primary-instagram: linear gradient hsl(37, 97%, 70%) to hsl(329, 70%, 58%);
+  --clr-primary-YouTube: hsl(348, 97%, 39%);
+
+  /* DARK THEME */
+  --clr-primary-dk-toggle: linear gradient hsl(210, 78%, 56%) to hsl(146, 68%, 55%);
+
+  /* LIGHT THEME */
+  --clr-primary-lt-toggle: hsl(230, 22%, 74%);
+
+  /* NEUTRAL COLORS - DARK THEME */
+  --clr-neutral-dk-very-dark-blue-(BG): hsl(230, 17%, 14%);
+  --clr-neutral-dk-very-dark-blue-(Top-BG-Pattern): hsl(232, 19%, 15%);
+  --clr-neutral-dk-dark-desaturated-blue (Card BG): hsl(228, 28%, 20%);
+  --clr-neutral-dk-desaturated-blue-(Text): hsl(228, 34%, 66%);
+  --clr-neutral-dk-white-(Text): hsl(0, 0%, 100%);
+
+  /* NEUTRAL COLORS - LIGHT THEME */
+  --clr-neutral-lt-white (BG): hsl(0, 0%, 100%);
+  --clr-neutral-lt-very-pale-blue-(Top-BG-Pattern): hsl(225, 100%, 98%);
+  --clr-neutral-lt-light-grayish-blue-(Card-BG): hsl(227, 47%, 96%);
+  --clr-neutral-lt-dark-grayish-blue-(Text): hsl(228, 12%, 44%);
+  --clr-neutral-lt-very-dark-blue-(Text): hsl(230, 17%, 14%);
+}
+
+body {
+  font-size: .875rem;
+  font-family: 'Inter', sans-serif;
+  width: 100%;
+  min-height: 100vh;
+}
+
+/* HEADER */
+header {
+  margin: 3rem 2rem;
+  margin-bottom: 2.5rem;
+  margin-top: 1.5rem;
+  display: grid;
+}
+header h1 {
+  font-size: 1.5rem;
+  font-weight: 600;
+}
+
+header > p {
+  color: var(--clr-neutral-lt-dark-grayish-blue-(Text));
+}
+
+#toggle-section {
+  margin-top: 1.8rem;
+  padding-top: 1rem;
+  border-top: 1px solid var(--clr-neutral-lt-dark-grayish-blue-(Text));
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+}
+
+#dark-mode {
+  color: #000;
+  font-weight: 500;
+  align-self: end;
+}
+
+#toggle {
+  justify-self: end;
+  position: relative;
+  display: inline-block;
+  width: 3.4375rem;
+  height: 1.5625rem;
+}
+
+#toggle input {
+  display: none;
+}
+
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: var(--clr-primary-lt-toggle);
+  transition: .4s;
+  border-radius: 2.125rem;
+}
+
+.slider::before {
+  position: absolute;
+  content: '';
+  height: 1.25rem;
+  width: 1.25rem;
+  left: .25rem;
+  bottom: .125rem;
+  background-color: var(--clr-neutral-lt-white);
+  transition: .4s;
+  border-radius: 50%;
+}
+
+input:checked + .slider {
+  background: var(--clr-primary-toggle-linear-gradient);
+}
+
+input:checked + .slider::before {
+  transform: translateX(1.625rem);
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
