--- a/css/style.css
+++ b/css/style.css
@@ -190,8 +190,97 @@ input:checked + .slider::before {
   transform: translateX(1.625rem);
 }
 
+/* MAIN - TOP TILES */
+.green {
+  color: var(--clr-primary-lime-green);
+}
 
+.red {
+  color: var(--clr-primary-bright-red);
+}
 
+#main-section {
+  margin-bottom: 3rem;
+  padding: 0 2rem;
+}
+
+.main-tiles {
+  background-color: var(--clr-neutral-lt-light-grayish-blue-(Card-BG));
+  border-radius: .3125rem;
+  height: 13rem;
+  text-align: center;
+  margin-bottom: 1.5rem;
+}
+
+.main-tiles p:first-of-type {
+  padding-top: 1.5rem;
+  color: var(--clr-neutral-lt-dark-grayish-blue-(Text));
+  font-weight: 500;
+}
+
+.main-tiles img {
+  margin-right: .2rem;
+  position: relative;
+  top: .3125rem;
+}
+
+.main-tiles > h2 {
+  font-size: 3rem;
+  margin-top: 1.3rem;
+}
+
+.main-tiles > h2 span {
+  display: block;
+  font-size: .8rem;
+  letter-spacing: .1875rem;
+  font-weight: 200;
+  text-transform: uppercase;
+  color: var(--clr-neutral-lt-dark-grayish-blue-(Text));
+}
+
+.main-tiles p:last-of-type {
+  margin-top: 2rem;
+  font-weight: 600;
+  font-size: .7rem;
+}
+
+.main-tiles:first-of-type {
+  border-top: .3125rem solid var(--clr-primary-facebook);
+}
+
+.main-tiles:nth-of-type(2) {
+  border-top: .3125rem solid var(--clr-primary-twitter);
+}
+
+.main-tiles:nth-of-type(3) {
+  position: relative;
+}
+
+.main-tiles:nth-of-type(3)::before {
+  content: '';
+  position: absolute;
+  left: 0;
+  width: 100%;
+  height: .3125rem;
+  background: linear-gradient(45deg,hsl(37, 97%, 70%) , hsl(329, 70%, 58%));
+  border-top-right-radius: .3125rem;
+  border-top-left-radius: .3125rem;
+}
+
+.main-tiles:last-of-type {
+  border-top: .3125rem solid var(--clr-primary-YouTube);
+}
+
+/* BOTTOM SECTION */
+h3 {
+  font-size: 1.4rem;
+  margin-bottom: 1.7rem;
+  color: var(--clr-neutral-lt-dark-grayish-blue-(Text));
+}
+
+#bottom-section {
+  padding: 0 2rem;
+}
 
 
 
