--- a/css/style.css
+++ b/css/style.css
@@ -1,157 +1,61 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
-
-/* Box sizing rules */
-*,
-*::before,
-*::after {
+* , ::before , ::after {
+  padding: 0;
+  margin:0;
   box-sizing: border-box;
 }
 
-/* Prevent font size inflation */
-html {
-  -moz-text-size-adjust: none;
-  -webkit-text-size-adjust: none;
-  text-size-adjust: none;
-}
 
-/* Remove default margin in favour of better control in authored CSS */
-body, h1, h2, h3, h4, p,
-figure, blockquote, dl, dd {
-  margin-block-end: 0;
-}
-
-/* Remove list styles on ul, ol elements with a list role, which suggests default styling will be removed */
-ul[role='list'],
-ol[role='list'] {
-  list-style: none;
-}
-
-/* Set core body defaults */
-body {
+body{
+  font-size: 14px;
+  width: 100%;
   min-height: 100vh;
-  line-height: 1.5;
-}
-
-/* Set shorter line heights on headings and interactive elements */
-h1, h2, h3, h4,
-button, input, label {
-  line-height: 1.1;
-}
-
-/* Balance text wrapping on headings */
-h1, h2,
-h3, h4 {
-  text-wrap: balance;
-}
-
-/* A elements that don't have a class get default styles */
-a:not([class]) {
-  text-decoration-skip-ink: auto;
-  color: currentColor;
-}
-
-/* Make images easier to work with */
-img,
-picture {
-  max-width: 100%;
-  display: block;
-}
-
-/* Inherit fonts for inputs and buttons */
-input, button,
-textarea, select {
-  font-family: inherit;
-  font-size: inherit;
-}
-
-/* Make sure textareas without a rows attribute are not tiny */
-textarea:not([rows]) {
-  min-height: 10em;
-}
-
-/* Anything that has been anchored to should have extra scroll margin */
-:target {
-  scroll-margin-block: 5ex;
+  font-family: "Inter", sans-serif;
 }
 
 ul {
-  list-style-type: none;
+  list-style: none;
 }
 
-:root {
-  /* PRIMARY COLORS */
-  --clr-primary-lime-green: hsl(163, 72%, 41%);
-  --clr-primary-bright-red: hsl(356, 69%, 56%);
+/* Header Section */
 
-  --clr-primary-facebook: hsl(208, 92%, 53%);
-  --clr-primary-twitter: hsl(203, 89%, 53%);
-  --clr-primary-instagram: linear gradient hsl(37, 97%, 70%) to hsl(329, 70%, 58%);
-  --clr-primary-YouTube: hsl(348, 97%, 39%);
-
-  /* DARK THEME */
-  --clr-primary-dk-toggle: linear gradient hsl(210, 78%, 56%) to hsl(146, 68%, 55%);
-
-  /* LIGHT THEME */
-  --clr-primary-lt-toggle: hsl(230, 22%, 74%);
-
-  /* NEUTRAL COLORS - DARK THEME */
-  --clr-neutral-dk-very-dark-blue-(BG): hsl(230, 17%, 14%);
-  --clr-neutral-dk-very-dark-blue-(Top-BG-Pattern): hsl(232, 19%, 15%);
-  --clr-neutral-dk-dark-desaturated-blue (Card BG): hsl(228, 28%, 20%);
-  --clr-neutral-dk-desaturated-blue-(Text): hsl(228, 34%, 66%);
-  --clr-neutral-dk-white-(Text): hsl(0, 0%, 100%);
-
-  /* NEUTRAL COLORS - LIGHT THEME */
-  --clr-neutral-lt-white (BG): hsl(0, 0%, 100%);
-  --clr-neutral-lt-very-pale-blue-(Top-BG-Pattern): hsl(225, 100%, 98%);
-  --clr-neutral-lt-light-grayish-blue-(Card-BG): hsl(227, 47%, 96%);
-  --clr-neutral-lt-dark-grayish-blue-(Text): hsl(228, 12%, 44%);
-  --clr-neutral-lt-very-dark-blue-(Text): hsl(230, 17%, 14%);
-}
-
-body {
-  font-size: .875rem;
-  font-family: 'Inter', sans-serif;
-  width: 100%;
-  min-height: 100vh;
-}
-
-/* HEADER */
-header {
+header{
+  /* width: 80%; */
   margin: 3rem 2rem;
   margin-bottom: 2.5rem;
   margin-top: 1.5rem;
   display: grid;
 }
+
 header h1 {
   font-size: 1.5rem;
   font-weight: 600;
 }
 
 header > p {
-  color: var(--clr-neutral-lt-dark-grayish-blue-(Text));
+  color:hsl(228, 12%, 44%) ;
+ 
 }
 
-#toggle-section {
+#toggle-section{
   margin-top: 1.8rem;
   padding-top: 1rem;
-  border-top: 1px solid var(--clr-neutral-lt-dark-grayish-blue-(Text));
+  border-top: 1px solid gray;
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
+  grid-template-columns: 1fr 1fr;
 }
 
-#dark-mode {
-  color: #000;
+#dark-mode{
+  color:black;
   font-weight: 500;
-  align-self: end;
+align-self: end;
 }
 
 #toggle {
-  justify-self: end;
+ justify-self: end;
   position: relative;
   display: inline-block;
-  width: 3.4375rem;
-  height: 1.5625rem;
+  width: 55px;
+  height: 25px;
 }
 
 #toggle input {
@@ -165,132 +69,241 @@ header > p {
   left: 0;
   right: 0;
   bottom: 0;
-  background-color: var(--clr-primary-lt-toggle);
+  background-color: hsl(230, 22%, 74%);
   transition: .4s;
-  border-radius: 2.125rem;
+  border-radius: 34px;
 }
 
-.slider::before {
+.slider::before{
   position: absolute;
-  content: '';
-  height: 1.25rem;
-  width: 1.25rem;
-  left: .25rem;
-  bottom: .125rem;
-  background-color: var(--clr-neutral-lt-white);
+  content: "";
+  height: 20px;
+  width: 20px;
+  left: 4px;
+  bottom: 2px;
+  background-color: white;
   transition: .4s;
   border-radius: 50%;
 }
 
-input:checked + .slider {
-  background: var(--clr-primary-toggle-linear-gradient);
+input:checked +.slider{
+  background: linear-gradient(hsl(210, 78%, 56%), hsl(146, 68%, 55%));
 }
 
-input:checked + .slider::before {
-  transform: translateX(1.625rem);
+input:checked +.slider::before{
+transform: translateX(26px);
 }
 
-/* MAIN - TOP TILES */
-.green {
-  color: var(--clr-primary-lime-green);
+
+/* Main / Top Tiles */
+
+.green{
+  color: green;
 }
 
-.red {
-  color: var(--clr-primary-bright-red);
+.red{
+  color: red;
 }
 
-#main-section {
-  margin-bottom: 3rem;
-  padding: 0 2rem;
+
+#main-section{
+margin-bottom: 3rem;
+padding: 0 2rem;
 }
+
 
 .main-tiles {
-  background-color: var(--clr-neutral-lt-light-grayish-blue-(Card-BG));
-  border-radius: .3125rem;
+  background-color:hsl(227, 47%, 96%) ;
+  border-radius: 5px;
   height: 13rem;
   text-align: center;
   margin-bottom: 1.5rem;
 }
 
+
 .main-tiles p:first-of-type {
   padding-top: 1.5rem;
-  color: var(--clr-neutral-lt-dark-grayish-blue-(Text));
+  color:hsl(228, 12%, 44%) ;
   font-weight: 500;
 }
 
-.main-tiles img {
+.main-tiles img{
   margin-right: .2rem;
   position: relative;
-  top: .3125rem;
+  top: 5px;
 }
 
 .main-tiles > h2 {
-  font-size: 3rem;
-  margin-top: 1.3rem;
+font-size: 3rem;
+margin-top: 1.3rem;
 }
 
-.main-tiles > h2 span {
+.main-tiles > h2 span{
   display: block;
   font-size: .8rem;
-  letter-spacing: .1875rem;
+  letter-spacing: 3px;
   font-weight: 200;
   text-transform: uppercase;
-  color: var(--clr-neutral-lt-dark-grayish-blue-(Text));
+  color:hsl(228, 12%, 44%) ;
 }
 
-.main-tiles p:last-of-type {
+.main-tiles p:last-of-type{
   margin-top: 2rem;
   font-weight: 600;
   font-size: .7rem;
 }
 
 .main-tiles:first-of-type {
-  border-top: .3125rem solid var(--clr-primary-facebook);
+  border-top: 5px solid hsl(208, 92%, 53%);
 }
 
-.main-tiles:nth-of-type(2) {
-  border-top: .3125rem solid var(--clr-primary-twitter);
+
+.main-tiles:nth-of-type(2){
+  border-top: 5px solid hsl(203, 89%, 53%) ;
 }
 
-.main-tiles:nth-of-type(3) {
+.main-tiles:nth-of-type(3){
   position: relative;
+
 }
 
-.main-tiles:nth-of-type(3)::before {
-  content: '';
+.main-tiles:nth-of-type(3)::before{
+  content: "";
   position: absolute;
   left: 0;
   width: 100%;
-  height: .3125rem;
+  height: 5px;
   background: linear-gradient(45deg,hsl(37, 97%, 70%) , hsl(329, 70%, 58%));
-  border-top-right-radius: .3125rem;
-  border-top-left-radius: .3125rem;
+  border-top-right-radius: 5px;
+  border-top-left-radius: 5px;
 }
 
-.main-tiles:last-of-type {
-  border-top: .3125rem solid var(--clr-primary-YouTube);
+.main-tiles:last-of-type{
+  border-top: 5px solid hsl(348, 97%, 39%);
 }
 
-/* BOTTOM SECTION */
-h3 {
+
+/* Bottom Section */
+
+h3{
   font-size: 1.4rem;
   margin-bottom: 1.7rem;
-  color: var(--clr-neutral-lt-dark-grayish-blue-(Text));
+  color: hsl(228, 12%, 44%);
 }
 
-#bottom-section {
+#bottom-section{
   padding: 0 2rem;
 }
 
+.bottom-tiles{
+  background-color:hsl(227, 47%, 96%) ;
+  margin-bottom: 1rem;
+  border-radius: 8px;
+  display: grid;
+  grid-template-columns: 1fr 100px;
+  gap: 1.4rem;
+  height: 7rem;
+ padding: 1.5rem;
+}
+
+.bottom-tiles p:first-of-type{
+  color: hsl(228, 12%, 44%);
+  font-weight: 600;
+  text-transform: capitalize;
+}
+
+.bt-last-p {
+align-self: end;
+font-size: .7rem;
+}
+
+h4{
+  font-size: 1.5rem;
+  align-self: end;
+}
 
 
 
+.bottom-tiles img , .bt-last-p{
+  justify-self: flex-end;
+}
 
 
+@media screen and (min-width: 768px){
+  header{
+      padding: 1rem 2rem;
+      display: grid;
+  }
+
+  
+
+  #main-section > ul{
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 1rem;
+  }
+
+  #bottom-section > ul {
+      display: grid;
+      grid-template-columns: repeat(2, 1fr);
+      gap: 1rem;
+  }
+
+}
 
 
+@media screen and (min-width: 1025px){
+ header{
+  display: block;
+ }
+
+  #toggle-section{
+      border-top: none;
+      padding-top: 0;
+      margin-top: 0;
+      width: 300px;
+      position: absolute;
+      right: 0;
+      top: 3rem;
+  } 
+
+  #dark-mode{
+      justify-self: end;
+      margin-right: .4rem;
+  }
+
+  #toggle{
+      justify-self: flex-start;
+      margin-left: 4px;
+  }
+
+  main{
+      margin: 0 2rem;
+   }
+
+  #main-section > ul{
+  grid-template-columns: repeat(4, 1fr);
+  gap: 1.9rem;
+  }
+
+  #bottom-section > ul {
+      gap: 2rem;
+  }
 
 
+ .bottom-tiles{
+  height: 8rem;
+ }
 
+}
 
+@media screen and (min-width: 1201px){
+  #bottom-section > ul {
+     grid-template-columns: repeat(4, 1fr);
+  }
+
+  .bottom-tiles{
+      grid-template-columns: 1fr 80px;
+  }
+}
 
